Improvements in code readability.

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -6,13 +6,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(${CMAKE_PROJECT_NAME})
 
+target_compile_definitions(${PROJECT_NAME} PRIVATE BIONIC_IOCTL_NO_SIGNEDNESS_OVERLOAD)
+
 file(GLOB_RECURSE PROJECT_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
 file(GLOB_RECURSE PROJECT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_HEADERS} ${PROJECT_SOURCES})
 
-target_sources(${PROJECT_NAME} PRIVATE
-        ${PROJECT_HEADERS}
-        ${PROJECT_SOURCES}
-)
 target_include_directories(${PROJECT_NAME} PRIVATE src/)
 
 target_link_libraries(${CMAKE_PROJECT_NAME}
