--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -55,7 +57,14 @@ jobs:
           name: app-release.apk
           path: app/build/outputs/apk/release/app-release-signed.apk
 
-      - name: Make Release
-        uses: ncipollo/release-action@v1
+      - name: Generate changelog
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 HEAD^)
+          echo "## Коммиты с прошлого релиза $LAST_TAG" > CHANGELOG.md
+          git log $LAST_TAG..HEAD --oneline >> CHANGELOG.md
+
+      - name: Create Release
+        uses: ncipollo/release-action@v1.16.0
         with:
           artifacts: app/build/outputs/apk/release/app-release-signed.apk
+          bodyFile: CHANGELOG.md
